feat(workplace): add server

--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "concurrently \"ng serve\" \"yarn start:server\"",
+    "start:server": "node ./server/app.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -19,6 +20,8 @@
     "@angular/platform-browser": "~12.1.4",
     "@angular/platform-browser-dynamic": "~12.1.4",
     "@angular/router": "~12.1.4",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
     "rxjs": "~6.6.0",
     "tailwindcss": "^2.2.7",
     "tslib": "^2.0.0",
@@ -31,6 +34,7 @@
     "@angular/compiler-cli": "~12.1.4",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
+    "concurrently": "^6.2.0",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
