--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@angular/platform-browser": "~12.1.4",
     "@angular/platform-browser-dynamic": "~12.1.4",
     "@angular/router": "~12.1.4",
+    "@ngrx/store": "^12.3.0",
+    "@ngrx/store-devtools": "^12.3.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "rxjs": "~6.6.0",
@@ -34,8 +36,8 @@
     "@angular/compiler-cli": "~12.1.4",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
-    "concurrently": "^6.2.0",
     "codelyzer": "^6.0.0",
+    "concurrently": "^6.2.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.3.4",
